catkin_ws/logs/backend/build.make.029.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp: In function ‘bool readImage(SLAM::Frame, int)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:132:24: error: expected ‘;’ before ‘_’
  return (!mylog.good())_; 
                        ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:132:24: error: ‘_’ was not declared in this scope
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:132:24: note: suggested alternatives:
In file included from /usr/include/boost/mpl/aux_/include_preprocessed.hpp:37:0,
                 from /usr/include/boost/mpl/placeholders.hpp:43,
                 from /usr/include/boost/mpl/apply.hpp:24,
                 from /usr/include/boost/mpl/aux_/iter_apply.hpp:17,
                 from /usr/include/boost/mpl/aux_/find_if_pred.hpp:14,
                 from /usr/include/boost/mpl/find_if.hpp:17,
                 from /usr/include/boost/mpl/find.hpp:17,
                 from /usr/include/boost/mpl/aux_/contains_impl.hpp:20,
                 from /usr/include/boost/mpl/contains.hpp:20,
                 from /usr/include/boost/math/policies/policy.hpp:10,
                 from /usr/include/boost/math/policies/error_handling.hpp:19,
                 from /usr/include/boost/math/special_functions/round.hpp:14,
                 from /opt/ros/indigo/include/ros/time.h:58,
                 from /opt/ros/indigo/include/ros/ros.h:38,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:11:
/usr/include/boost/mpl/aux_/preprocessed/gcc/placeholders.hpp:14:19: note:   ‘mpl_::_’
 typedef arg< -1 > _;
                   ^
/usr/include/boost/mpl/aux_/preprocessed/gcc/placeholders.hpp:14:19: note:   ‘mpl_::_’
/usr/include/boost/mpl/aux_/preprocessed/gcc/placeholders.hpp:14:19: note:   ‘mpl_::_’
make[2]: *** [CMakeFiles/backend.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/backend.dir/all] Error 2
make: *** [all] Error 2
